src/components/Hero/Hero.module.scss
@import "../../styles/styles.scss";

.bg {
  position: fixed;
  pointer-events: none;
  top: 0;
  left: 0;
  z-index: 0;
  aspect-ratio: 1731/1259;
  width: max(2100px, 100%);
  background-repeat: no-repeat;
  background-position: top;
  background-size: cover;
  overflow-x: hidden;

  &.large {
    background-image: url('../../assets/background/large_obj.svg');
  }

  &.small {
    background-image: url('../../assets/background/stars.svg');
  }
}

.date {
  font-family: $font-secondary;
  font-weight: 500;
  font-size: $font-size-3;
}

.title_container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 30px;
}

.rocket {
  display: block;
  height: 150px;
  margin-right: 30px;
  margin-bottom: 0;
}

.title > g > #bottom {
  width: 5px;

}

.title {
  display: block;
  // make an animation for text

}

.title_accent {
  color: $dark-purple;
}

.subtitle {
  margin: 0 auto;
  width: 80%;
  font-size: $font-size-2;
  margin-bottom: 2rem;
}

.highlight {
  font-family: $font-primary;
  font-size: $font-size-6;
  letter-spacing: 0.2rem;
  text-transform: uppercase;
  color: $light-purple;
}

.buttons {
  display: flex;
  justify-content: space-evenly;
  width: 30%;
  margin: 0 auto;
  margin-top: 3rem;
}

button {
  padding: 1rem 2.5rem;
  border-radius: 5rem;
  border: none;
  font-size: $font-size-1;
  font-family: $font-secondary;
  font-weight: 500;
  cursor: pointer;
}

.button_accent {
  background-color: $accent-green;
}

